# aisaka

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindAegis.cmake  FindSphinx.cmake  Findrobin_hood.cmake  aisakaConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  index.rst
include/aisaka/: Bot.hpp  Client.hpp  Version.hpp  Version.hpp.in
include/aisaka/command/: Command.hpp  Commands.hpp  Metadata.hpp  Parameter.hpp
include/aisaka/command/categories/: Category.hpp
include/aisaka/command/util/: GetterSetterMacro.hpp
include/aisaka/util/: String.hpp
src/: Bot.cpp  CMakeLists.txt  Client.cpp
src/command/: Command.cpp  Commands.cpp  Metadata.cpp  Parameter.cpp
src/command/categories/: Category.cpp
src/util/: String.cpp
